<resources>
    <string name="app_name">Sales App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sync">Sync</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="author">Author</string>
    <string name="txt_btn_save">Save</string>
    <string name="map_api_key">AIzaSyA0TxISmHfgdBwQuLcVG68Yt5fA_GUoqLw</string>
    <string name="select2">Choose an item</string>
    <string name="login">Login</string>
    <string name="OR">OR</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="MobileNo">Mobile No.</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="forgot"><u>Forgot Password?</u></string>
    <string name="header_cancel">Cancel</string>
    <string name="header_filter">Filter</string>
    <string name="header_reset">Reset</string>
    <string name="unit_sort">Sort By</string>
    <string name="unit_price">Price</string>
    <string name="unit_floor">Floor</string>
    <string name="unit_filter_fllor">Filter by Floor</string>
    <string name="unit_filter_floor_d">Showing available floors only</string>
    <string name="unit_apply">APPLY FILTERS</string>
    <string name="ground_floor">Ground</string>
    <string name="I_floor">1</string>
    <string name="II_floor">2</string>
    <string name="III_floor">3</string>
    <string name="IIIV_floor">4</string>
    <string name="V_floor">5</string>
    <string name="VI_floor">6</string>
    <string name="VII_floor">7</string>
    <string name="VIII_floor">8</string>
    <string name="IX_fllor">9</string>
    <string name="X_floor">10</string>
    <string name="XI_floor">11</string>
    <string name="XII_floor">12</string>
    <string name="XIII_floor">13</string>
    <string name="XIV_fllor">14</string>
    <string name="XV_floor">15</string>
    <string name="XVI_floor">16</string>
    <string name="XVII_floor">17</string>
    <string name="XVIII_floor">18</string>
    <string name="XIX_floor">19</string>
    <string name="XX_floor">20</string>
    <string name="XXI_floor">21</string>
    <string name="XXII_floor">22</string>
    <string name="XXIII_floor">23</string>
    <string name="set_text">Set Pickup Date &amp; Time</string>
    <string name="set_time">I agree</string>
    <string name="set_terms"> <u>T&amp;C</u> </string>
    <string name="set_term_cond">By creating an account, you agree to our Terms &amp; Conditions</string>
    <string name="pre_launch"> NEW &amp; PRE LAUNCH </string>
    <string name="project_header">RESET</string>
    <string name="project_header_concel">Cancel</string>
    <string name="project_header_filter">Filter</string>
    <string name="project_filter_newl">  New  \nLaunch</string>
    <string name="project_filter_underC">Under \nConstruction</string>
    <string name="project_filter_ready">  Ready to\nmove in</string>
    <string name="project_relevance">Relevance</string>
    <string name="project_newest">Newest</string>
    <string name="project_price">Price</string>
    <string name="project_price_psf">Price PSF</string>
    <string name="project_rating">Rating</string>
    <string name="project_Possession">Possession</string>
    <string name="project_infra">Infra</string>
    <string name="project_needs">Needs</string>
    <string name="project_lifestyle">Lifestyle</string>
    <string name="project_returns">Returns</string>
    <string name="only_show_project">Only show Project with</string>
    <string name="discount">Discounts &amp; Offers available</string>
    <string name="possession_project">Possession in</string>
    <string name="select_property_type">Only One Typology(Residential/Commercial) can be selected at one time </string>
    <string name="select_property">Select Property type</string>
    <string name="select_relevent">RESIDENTIAL</string>
    <string name="select_commercial">COMMERCIAL</string>
    <string name="price_psf">₹ 500 to ₹  20000 </string>
    <string name="priceMark"> ₹ </string>
    <string name="price_psf_left"> 500</string>
    <string name="price_psf_right"> 20000</string>
    <string name="Rs_left"> 25 L</string>
    <string name="Rs_right">₹  5 Cr</string>
    <string name="Rs">₹  25 L to ₹  5 Cr</string>
    <string name="Area_in_sqft">250 sqft to 8000 sqft</string>
    <string name="Area_in_sqft_left">250 sqft</string>
    <string name="Area_in_sqft_right">8000 sqft</string>
    <string name="Price_marker">  ₹ </string>
    <string name="title_activity_upload_property">UploadPropertyActivity</string>
    <string name="enter_locality">Enter Locality</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_site_visit_address">Please enter site visit address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_area_in_sq_ft">Enter Area in Sq.Ft</string>
    <string name="enter_size_2_3_4_bhk_">Enter Size (2/3/4 Bhk)</string>
    <string name="enter_price">Enter Price</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="submit">Submit</string>
    <string name="title_activity_property_list">PropertyListActivity</string>
    <string name="title_activity_property_detail">PropertyDetailActivity</string>
    <string name="title_activity_bmhmap">BMHMapActivity</string>
    <string name="title_activity_uploader_detail">UploaderDetailActivity</string>
    <string name="gallery">Gallery</string>
    <string name="select_property_t">Select Property</string>
    <string name="select_location">Select Location</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_search_property">SearchPropertyActivity</string>
    <string name="title_activity_price_trends">PriceTrendsActivity</string>
    <string name="title_activity_buy_rent_chooser">BuyRentChooserActivity</string>
    <string name="title_activity_city_list">CityListActivity</string>
    <string name="title_activity_area_list">AreaListActivity</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youTubeApiKey">AIzaSyCEL5dmQC2czbec6ey-bWNpaFaKXBuRbHo</string>
    <string name="heading1">Overview</string>
    <string name="heading2">Amenities</string>
    <string name="heading3">Location</string>
    <string name="heading4">Approvals</string>
    <string name="heading5">Images/Videos</string>
    <string name="heading6">Price Break Ups</string>
    <string name="heading7">You need to pay an earnest money to place your Bid.</string>
    <string name="localityData">Raheja Revanta is one of the benchmark luxury projects launched by Raheja Developers Ltd. Located at Sector 78, Gurgaon</string>
    <string name="address">Address</string>
    <string name="Username">Username</string>
    <string name="Mobile">Mobile</string>
    <string name="areaRange">Area Range</string>
    <string name="priceRange">Price Range</string>
    <string name="PossessionDate">Possession Date</string>
    <string name="StartingPrice">Starting Price</string>
    <string name="size">Size</string>
    <string name="price">Price (Sq./Ft)</string>
    <string name="samlpeFlat">Sample Flat</string>
    <string name="Appreciation">Appreciation</string>
    <string name="bestOffer">Best Offer</string>
    <string name="openArea">Open Area</string>
    <string name="powerBackUp">Power Back Up</string>
    <string name="security">Security</string>
    <string name="wifi">Wi-Fi</string>
    <string name="cctv">CCTV</string>
    <string name="business">Business Center</string>
    <string name="shoppingArea">Shopping Area</string>
    <string name="club">Club</string>
    <string name="tennis">Tennis</string>
    <string name="basket">Basket</string>
    <string name="billiards">Billiards</string>
    <string name="spa">Spa</string>
    <string name="sauna">Sauna</string>
    <string name="steamBath">Steam Bath</string>
    <string name="jacuzzi">Jacuzzi</string>
    <string name="gym">Gymnesium</string>
    <string name="squash">Squash</string>
    <string name="approvedBy">Approved By Housing Board,..........etc and have No Objection Certificate(Text related approvals will be here.)</string>
    <string name="map">Map :</string>
    <string name="priceDetail">Price :</string>
    <string name="direction">Direction :</string>
    <string name="balcony">Balconies :</string>
    <string name="toilet">Toilets :</string>
    <string name="wardrobe">Wardrobes :</string>
    <string name="ac">AC :</string>
    <string name="kitchen">Modular Kitchen :</string>
    <string name="bid">Bid/Buy Now</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="req">Request a Call Back</string>
    <string name="parking">Parking Space</string>
    <string name="lift">Lifts</string>
    <string name="servant">Servant Room</string>
    <string name="store">Store</string>
    <string name="pooja">Pooja Room</string>
    <string name="furnished">Furnished</string>
    <string name="washing">Washing Area</string>
    <string name="home">Home Automation</string>
    <string name="pipedGas">Piped gas</string>
    <string name="bookingAmt">Booking Amount</string>
    <string name="totalAmt">Total Amount</string>
    <string name="bsp">BSP</string>
    <string name="plc">PLC</string>
    <string name="clubMembership">Club Membership :</string>
    <string name="edc">EDC + IDC :</string>
    <string name="ibms">IBMS :</string>
    <string name="ifms">IFMS :</string>
    <string name="ebid">E-Bid Earnest Money :</string>
    <string name="proceed">Proceed</string>
    <string name="bidStart">Bid Start Price</string>
    <string name="highestBid">Highest Bid</string>
    <string name="total">Total :</string>
    <string name="enterBid">Enter your bid</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="schools">Schools</string>
    <string name="hospitals">Hospitals</string>
    <string name="shopping_malls">Shopping Malls</string>
    <string name="restaurants">Restaurants</string>
    <string name="banks">Banks</string>
    <string name="parks">Parks</string>
    <string name="moview_theaters">Movie Theaters</string>
    <string name="night_clubs">Night Clubs</string>
    <string name="low_to_high">Low to high</string>
    <string name="high_to_low">High to low</string>
    <string name="Cancel">Cancel</string>
    <string name="i_would_like_to">I would like to buy it for</string>
    <string name="make_an_offer">Make an Offer</string>
    <string name="tab_leads_assigned">LEADS ASSIGNED</string>
    <string name="tab_transactions">TRANSACTIONS</string>
    <string name="tab_personal_info">PERSONAL INFO</string>
    <string name="sit_back_message"><![CDATA[Sit back & Relax!]]></string>
    <string name="sit_back_message_2"><![CDATA[While we are verifying your mobile number]]></string>
    <string name="enter_otp_manually">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="menu_item_calender_view">Calendar View</string>
    <string name="menu_item_heat_map">Heat Map</string>
    <string name="menu_item_status">Status</string>
    <string name="menu_item_date_and_time">Date and Time</string>
    <string name="menu_item_all_leads">All Leads</string>
</resources>