<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_lifestyle_root"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/selected_tv"
    android:orientation="horizontal"
    android:padding="0dp" >
    <Button
        android:id="@+id/btn_infra"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/project_infra"
        android:textColor="@color/heatmap_btn_text_state"
        android:inputType="textCapWords"
        android:gravity="center"
        android:layout_margin="0.5dp"
        android:background="@drawable/heatmap_btn_state"/>
    <Button
        android:id="@+id/btn_needs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textCapWords"
        android:text="@string/project_needs"
        android:textColor="@color/heatmap_btn_text_state"
        android:layout_margin="0.5dp"
        android:background="@drawable/heatmap_btn_state"/>
    <Button
        android:id="@+id/btn_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textCapWords"
        android:text="@string/project_price"
        android:textColor="@color/heatmap_btn_text_state"
        android:layout_margin="0.5dp"
        android:background="@drawable/heatmap_btn_state"/>
    <Button
        android:id="@+id/btn_lifestyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:inputType="textCapWords"
        android:gravity="center"
        android:text="@string/project_lifestyle"
        android:textColor="@color/heatmap_btn_text_state"
        android:layout_margin="0.5dp"
        android:background="@drawable/heatmap_btn_state"/>
    <Button
        android:id="@+id/btn_returns"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:inputType="textCapWords"
        android:text="@string/project_returns"
        android:textColor="@color/heatmap_btn_text_state"
        android:layout_margin="0.5dp"
        android:background="@drawable/heatmap_btn_state"/>

</LinearLayout>