<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.activities.VerifyOtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/app_icon_sp" />

        <TextView
            android:id="@+id/tv_msg"
            style="@style/tv_otp_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/sit_back_message" />

        <TextView
            android:id="@+id/tv_msg3"
            style="@style/tv_otp_msg_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:text="@string/sit_back_message_2" />

        <TextView
            android:id="@+id/tv_msg2"
            style="@style/tv_otp_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/enter_otp_manually" />

        <EditText
            android:id="@+id/et_otp"
            style="@style/BMHEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="4"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#AAADAD"
            android:textCursorDrawable="@null">

            <requestFocus />
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D4D8D8"></View>

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/text_state_white_blue"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/btn_filled"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
