<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green_border"
    android:orientation="vertical"
    android:paddingLeft="1dp"
    android:paddingRight="1dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_schools"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/schools"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_hospitals"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/hospitals"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_malls"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/shopping_malls"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_reataurant"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/restaurants"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_banks"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/banks"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_parks"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/parks"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_moview"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/moview_theaters"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />

        <TextView
            android:id="@+id/tv_night_club"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/place_button_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/night_clubs"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/places_tv_textsize" />
    </LinearLayout>

</LinearLayout>