<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#cccccc"
        android:orientation="vertical"
        android:padding="1dp" >

        <Button
            android:id="@+id/btnLtoH"
            style="@style/BHMButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/new_launch_selector"
            android:padding="8dp"
            android:text="@string/low_to_high"
            android:textColor="@drawable/filter_tv_text_selector"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnHtoL"
            style="@style/BHMButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/new_launch_selector"
            android:padding="8dp"
            android:text="@string/high_to_low"
            android:textColor="@drawable/filter_tv_text_selector"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/BHMButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/new_launch_selector"
            android:padding="8dp"
            android:text="@string/Cancel"
            android:textColor="@drawable/filter_tv_text_selector"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>