<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_grey"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/make_an_offer"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:src="@drawable/ico_accept"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="7dp"
                android:text="@string/i_would_like_to"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_offer_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/blue_border_ovel"
            android:text="@string/submit"
            android:textColor="@color/text_state_gold_dark_gold" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/blue_border_ovel"
            android:text="@string/Cancel"
            android:textColor="@color/text_state_gold_dark_gold" />
    </LinearLayout>
</RelativeLayout>