<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.activities.BrokerDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cb_grey"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/black_alpha_40">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_leads_assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_leads_assigned" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_transactions" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_personal_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_personal_info" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
